[WWIP] Java 17 Migration